RESOLVED FIXED229747
REGRESSION (r280017): Calling getBoundingClientRect() on an empty element with "break-before: column" in columns returns a rect with all zeros
https://bugs.webkit.org/show_bug.cgi?id=229747
Summary REGRESSION (r280017): Calling getBoundingClientRect() on an empty element wit...
Simon Fraser (smfr)
Reported 2021-08-31 17:30:44 PDT
Calling getBoundingClientRect() on a 0x0 element in columns returns a rect with all zeros.
Attachments
Test case (5.67 KB, text/html)
2021-08-31 17:34 PDT, Simon Fraser (smfr)
no flags
Test case (5.52 KB, text/html)
2021-08-31 17:42 PDT, Simon Fraser (smfr)
no flags
Patch (5.90 KB, patch)
2021-09-02 18:54 PDT, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2021-08-31 17:30:57 PDT
Simon Fraser (smfr)
Comment 2 2021-08-31 17:34:01 PDT
Created attachment 436973 [details] Test case
Simon Fraser (smfr)
Comment 3 2021-08-31 17:38:08 PDT
Conceptually we are trying to answer the question "for this 0x0 rect at y=100, in columns with height 100, is it at the bottom of column 1 or the top of column 2".
Simon Fraser (smfr)
Comment 4 2021-08-31 17:42:57 PDT
Created attachment 436974 [details] Test case Ironically Chrome and FF have exactly opposite behaviors.
Simon Fraser (smfr)
Comment 5 2021-09-02 18:54:45 PDT
EWS
Comment 6 2021-09-06 12:30:26 PDT
Committed r282063 (241363@main): <https://commits.webkit.org/241363@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 437230 [details].
Simon Fraser (smfr)
Comment 7 2021-09-07 14:14:19 PDT
*** Bug 230020 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.